tests/baselines/reference/assignToExistingClass.errors.txt
==== tests/cases/compiler/assignToExistingClass.ts (1 errors) ====
    module Test {
        class Mocked {
            myProp: string;
        }
    
        class Tester {
            willThrowError() {
                Mocked = Mocked || function () { // => Error: Invalid left-hand side of assignment expression.
                ~~~~~~
!!! assignToExistingClass.ts(8,13): error TS2130: Invalid left-hand side of assignment expression.
                    return { myProp: "test" };
                };
            }
        }
     
    }
    